[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Adviser.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/zc.png-c7ffa83bf28af8def63c79202632e383.stex"

[node name="AdvsiorNotice" type="AcceptDialog"]
anchor_left = 0.293945
anchor_top = 0.303333
anchor_right = 0.706055
anchor_bottom = 0.696667
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
dialogue_file = "res://dialog/cityplanner.json"
character = "Zack Casey"
rank = "City Planner"
avatar = SubResource( 1 )

[node name="Container" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Advisor" type="VBoxContainer" parent="Container"]
margin_right = 100.0
margin_bottom = 192.0

[node name="Avatar" type="TextureRect" parent="Container/Advisor"]
margin_right = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="RankLbl" type="Label" parent="Container/Advisor"]
margin_top = 4.0
margin_right = 100.0
margin_bottom = 18.0
align = 1

[node name="NameLbl" type="Label" parent="Container/Advisor"]
margin_top = 22.0
margin_right = 100.0
margin_bottom = 36.0
align = 1

[node name="DescriptionLbl" type="RichTextLabel" parent="Container"]
margin_left = 112.0
margin_right = 406.0
margin_bottom = 192.0
